--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -28,7 +28,7 @@ Compatible-Versions:
 - 0.0.22
 - 0.0.23
 - 0.0.24
-Cartridge-Vendor: redhat
+Cartridge-Vendor: openshiftqe
 Categories:
 - service
 - php
